--- a/app/views/paperpresenterintconferences/_form.html.erb
+++ b/app/views/paperpresenterintconferences/_form.html.erb
@@ -1,7 +1,7 @@
 
-<%= render 'shared/errors', object: @paperpresenterintconference %>
+<%= render 'shared/errors', object: @paper %>
 
-<%= form_for @paperpresenterintconference, :html => {:class => "form-horizontal"} do |f| %>
+<%= form_for @paper, :html => {:class => "form-horizontal"} do |f| %>
     
     <p class="primary-form-subheading">Institution Details</p> 
     <div class="row institution-details">
